--- a/index.html
+++ b/index.html
@@ -213,6 +213,28 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
+							<a href="article/article05.html">
+								<img src="images/Article/article005.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">語⾔發展的重要基⽯ — 語⾔前技能(上)</h5> <br>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 8分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 72 </i>
+									<i class="fa fa-heart-o"> 48 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
 							<a href="article/article04.html">
 								<img src="images/Article/article004.png" alt="Card image">
 								<div class="line"></div>
@@ -231,51 +253,30 @@
 						</div>
 					</div>
 				</div>
-					<!-- Repeat this block for each card -->
-					<div class="col-md-4">
-						<div class="card">
-							<div class="image-container">
-								<a href="article/article02.html">
-									<img src="images/Article/article003.png" alt="Card image">
-									<div class="line"></div>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">⾃閉症的警號</h5> <br>
-								</a>
-								<p class="card-text">撰⽂：諾道團隊</p>
-								<div class="icon-row">
-									<i class="fa fa-clock-o left"> 3分鐘 </i>
-									<div class="right">
-										<i class="fa fa-eye"> 102 </i>
-										<i class="fa fa-heart-o"> 28 </i>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 				<!-- Repeat this block for each card -->
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
-							<a href="article/article01.html">
-								<img src="images/Article/article002.png" alt="Card image">
+							<a href="article/article03.html">
+								<img src="images/Article/article003.png" alt="Card image">
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">從安全圈養育概念看孩子的需要</h5> <br>
+							<h5 class="card-title">⾃閉症的警號</h5> <br>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 4分鐘 </i>
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
 								<div class="right">
-									<i class="fa fa-eye"> 58 </i>
-									<i class="fa fa-heart-o"> 36 </i>
+									<i class="fa fa-eye"> 102 </i>
+									<i class="fa fa-heart-o"> 28 </i>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			
+
+
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
 					<div class="card">
@@ -382,17 +383,17 @@
 					</div>
 				</div>
 			</div>-->
-			<!-- Repeat this block for each card -->
-		</div>
-
-		<div class="row">
-			<div class="col-md-12 text-center read-more-container w3-button">
-				<a href="share.html">查看更多</a>
+				<!-- Repeat this block for each card -->
 			</div>
+
+			<div class="row">
+				<div class="col-md-12 text-center read-more-container w3-button">
+					<a href="share.html">查看更多</a>
+				</div>
+			</div>
+			<!-- end for section -->
+			<div class="clearfix"> </div>
 		</div>
-		<!-- end for section -->
-		<div class="clearfix"> </div>
-	</div>
 	</div>
 	<!-- //news -->
 
