--- a/share.html
+++ b/share.html
@@ -210,7 +210,7 @@
 							<div class="line"></div>
 					</div>
 					<div class="card-body">
-						<h5 class="card-title">從安全圈養育概念看孩子的需要</h5> <br>
+						<h5 class="card-title">從安全圈養育概念看孩子的需要</h5>
 						</a>
 						<p class="card-text">撰⽂：諾道團隊</p>
 						<div class="icon-row">
