--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">語⾔發展的重要基⽯ — 語⾔前技能(上)</h5>
+							<h5 class="card-title">語⾔發展的重要基⽯ - 語⾔前技能(上)</h5>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
