--- a/article/article05.html
+++ b/article/article05.html
@@ -160,7 +160,7 @@
 
 					⽗母可以觀察孩⼦在玩玩具時能不能集中並維持⼀段時間。九至⼗個⽉⼤的幼兒來說，若能維持2-3分鐘的專注⼒在⼀樣玩具上就相當理想了。<br><br>
 
-					<h4><b></b>共享專注(Joint Attention)</b></h4>
+					<h4><b>共享專注(Joint Attention)</b></h4>
 					共享專注是指與溝通對象⼀起專注於同⼀物件或事情上。孩⼦在九個⽉左右開始建⽴共享專注的能⼒，這能⼒包括「回應」以及「引發」。<br><br>
 
 					例如，你看到地上有雀仔，指著雀仔並向旁邊的孩⼦說：「睇吓！」，孩⼦將⽬光及專注由⼿上的玩具轉移到雀仔的⽅向以「回應」你引發的共享專注。<br><br>
@@ -169,7 +169,7 @@
 
 					共同專注的時刻就是孩⼦學習語⾔的最佳時機。試想像你想教孩⼦這是⼀⽀筆，指著這⽀筆說：「筆筆。」，唯有當孩⼦的⽬光跟你⼀樣放在這⽀筆上⾯，他才能把聽到的「筆」這個⾳跟眼前這個物件連上關係，從⽽學習⼀個又⼀個概念。<br><br>
 
-					<h4><b></b>物體恆存(Object Permanence)</b></h4>
+					<h4><b>物體恆存(Object Permanence)</b></h4>
 					物體恆存是指孩⼦意識到「即使東西不在眼前，但它仍然存在，⽽不是沒有了。」。<br><br>
 
 					如果您將孩⼦眼前的玩具藏起來，由於仍未建⽴物體恆存的能⼒，半歲以下的幼兒可能會感到困惑，很快就會放棄尋找它。<br><br>
@@ -178,18 +178,18 @@
 
 					物體恆存和語⾔有直接關係，當孩⼦建⽴了對於物件的記憶及認知，就會推動他們以語⾔代表不在眼前的東西。<br><br>
 
-					<h4><b></b>輪流作轉(Turn Taking)</b></h4>
+					<h4><b>輪流作轉(Turn Taking)</b></h4>
 					這個語⾔前技能的重點就是「輪流」！<br><br>
 					⽣活中到處都是輪流作轉的例⼦。孩⼦⼀個⼀個輪著滑滑梯、捉棋時⼀個⼀個順序擲骰⼦⾏棋。孩⼦先從遊戲中學習輪流，知道何時輪到⾃⼰，何時到對⽅，將來懂得說話的時候就能將概念延伸至「你⼀⾔、我⼀語」。由此可⾒掌握輪流概念對孩⼦的語⾔及社交發展有很⼤影響。<br><br>
 
-					<h4><b></b>因果概念(Causality)</b></h4>
+					<h4><b>因果概念(Causality)</b></h4>
 					「因果關係」是其中⼀個四至七個⽉⼤幼兒開始掌握的重要概念。<br><br>
 
 					孩⼦發現搖⼀搖(因)⼿上的公仔會令它發出聲⾳(果)、按下按鈕(因)公仔會彈出(果)。⽣活經驗讓孩⼦了解到他可以透過⼀個⾏為得出⼀個結果，推動他不斷探索身邊的事物。<br><br>
 
 					孩⼦先從⽣活或玩玩具中掌握因果概念，懂得說話的時候就會了解到當他說「抱抱。」(因)，爸爸媽媽就會抱起他(果)。<br><br>
 
-					<h4><b></b>總結</b></h4>
+					<h4><b>總結</b></h4>
 					孩⼦需要掌握⼀系列語⾔前技能，為⽇後的語⾔發展打下穩固基礎。下篇⽂章將為⼤家介紹另外六項語⾔前技能！<br><br>
 					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。<br>
 					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！
