--- a/article/article05.html
+++ b/article/article05.html
@@ -134,7 +134,7 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>語⾔發展的重要基⽯ - 語⾔前技能(上)</h2>
+					<h2>語言發展的重要基石 - 語⾔前技能(上)</h2>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：01-08-2024</p>
 				</div>
