--- a/index.html
+++ b/index.html
@@ -213,6 +213,50 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
+							<a href="article/article06.html">
+								<img src="images/Article/article007.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">自閉症孩子常有的「鸚鵡式說話」到底是怎麼一回事？</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 8分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 103 </i>
+									<i class="fa fa-heart-o"> 57 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article05.html">
+								<img src="images/Article/article006.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">孩子幾歲要懂多少個詞彙？</h5> <br>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 2分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 99 </i>
+									<i class="fa fa-heart-o"> 63 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
 							<a href="article/article05.html">
 								<img src="images/Article/article005.png" alt="Card image">
 								<div class="line"></div>
@@ -226,50 +270,6 @@
 								<div class="right">
 									<i class="fa fa-eye"> 72 </i>
 									<i class="fa fa-heart-o"> 48 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article04.html">
-								<img src="images/Article/article004.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">「愛之語」Love Language - 孩⼦感受到你的愛嗎?</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 5分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 89 </i>
-									<i class="fa fa-heart-o"> 33 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article03.html">
-								<img src="images/Article/article003.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">⾃閉症的警號</h5> <br>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 3分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 102 </i>
-									<i class="fa fa-heart-o"> 28 </i>
 								</div>
 							</div>
 						</div>
