--- a/share.html
+++ b/share.html
@@ -139,6 +139,50 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article07.html">
+							<img src="images/Article/article007.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">自閉症孩子常有的「鸚鵡式說話」到底是怎麼一回事？</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 8分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 103 </i>
+								<i class="fa fa-heart-o"> 57 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article06.html">
+							<img src="images/Article/article006.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">孩子幾歲要懂多少個詞彙？</h5><br>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 2分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 99 </i>
+								<i class="fa fa-heart-o"> 63 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article05.html">
 							<img src="images/Article/article005.png" alt="Card image">
 							<div class="line"></div>
@@ -210,7 +254,7 @@
 							<div class="line"></div>
 					</div>
 					<div class="card-body">
-						<h5 class="card-title">從安全圈養育概念看孩子的需要</h5>
+						<h5 class="card-title">從安全圈養育概念看孩子的需要</h5><br>
 						</a>
 						<p class="card-text">撰⽂：諾道團隊</p>
 						<div class="icon-row">
@@ -231,7 +275,7 @@
 							<div class="line"></div>
 					</div>
 					<div class="card-body">
-						<h5 class="card-title">⾔語治療是甚麼? 我的孩⼦需要嗎?</h5>
+						<h5 class="card-title">⾔語治療是甚麼? 我的孩⼦需要嗎?</h5><br>
 						</a>
 						<p class="card-text">撰⽂：諾道團隊</p>
 						<div class="icon-row">
