--- a/article/article07.html
+++ b/article/article07.html
@@ -171,7 +171,9 @@
 
 					⼤多數⾃閉症孩⼦都是。<br><br>
 
-					⼤多數⾃閉症孩⼦並不是「⼀步⼀步」學習語⾔！他們很可能⼀開始就⼀整句句⼦說出來。雖然所有孩⼦在學習語⾔的過程中都會模仿別⼈的話語，但非⾃閉症孩⼦通常很快就開始靈活運⽤各字詞︔但對⾃閉症孩⼦來說，這種模仿現象卻⼀直持續，⽽他們通常並不完全理解句⼦中各字詞的含義。這些被背誦出來的句⼦，相比起孩⼦真正掌握的語句更複雜，因此往往令⽗母和⽼師難以判斷，甚或傾向⾼估了孩⼦真正的語⾔能⼒。<br><br>
+					⼤多數⾃閉症孩⼦並不是「⼀步⼀步」學習語⾔！他們很可能⼀開始就⼀整句句⼦說出來。<br>
+					
+					雖然所有孩⼦在學習語⾔的過程中都會模仿別⼈的話語，但非⾃閉症孩⼦通常很快就開始靈活運⽤各字詞︔但對⾃閉症孩⼦來說，這種模仿現象卻⼀直持續，⽽他們通常並不完全理解句⼦中各字詞的含義。這些被背誦出來的句⼦，相比起孩⼦真正掌握的語句更複雜，因此往往令⽗母和⽼師難以判斷，甚或傾向⾼估了孩⼦真正的語⾔能⼒。<br><br>
 
 					以下讓⼤家透過兩個⽇常⽣活的例⼦了解⾃閉症兒童的「鸚鵡式說話」。<br><br>
 
