--- a/article/article07.html
+++ b/article/article07.html
@@ -154,7 +154,9 @@
 					例⼦1：⽼師向Hayden說：「Hello Hayden !」，Hayden：「Hello Hayden !」<br>
 					例⼦2：媽媽：「講 Bye Bye 啦！」，Hayden：「 講 Bye Bye 啦！」<br><br>
 
-					⼆. 延遲的鸚鵡式說話 (Delayed Echolalia)：隔⼀段時間才重複早前聽到的說話「延遲的鸚鵡式說話」很多時候顯得比「即時的鸚鵡式說話」更怪異，因為那些重複的話語通常都不適合當下情境。較常⾒的例⼦如重複背出地鐵廣播、卡通⽚或廣告的對⽩/語句。<br><br>
+					⼆. 延遲的鸚鵡式說話 (Delayed Echolalia)：隔⼀段時間才重複早前聽到的說話<br>
+					
+					「延遲的鸚鵡式說話」很多時候顯得比「即時的鸚鵡式說話」更怪異，因為那些重複的話語通常都不適合當下情境。較常⾒的例⼦如重複背出地鐵廣播、卡通⽚或廣告的對⽩/語句。<br><br>
 
 					例⼦：⼀位男孩⼦來上⾔語治療，進房間前突然⼤喊：「我哋⽽家準備去另⼀場冒險喇！」<br>
 					事源他早前看完多啦A夢電影，就把當中⼀句對⽩以「延遲的鸚鵡式說話」的⽅式表達。<br><br>
@@ -183,7 +185,7 @@
 					他說這句話的意思其實是「上完堂喇，有⼈嚟接我」。雖然他能理解「媽媽」這個詞彙的意思，亦知道誰是他的媽媽，但由於他是整體語⾔處理者，他將媽媽曾經對他說的話以「延遲的鸚鵡式說話」這種⽅式表達。這種「照板煮碗」的⽅式顯⽰他並不是將「媽媽」、「接」、「你」三個字詞分開處理，⽽是把「媽媽接你」當成⼀整件事去處理，亦即是⽂章早段提到的「⼤塊語⾔」。<br><br>
 
 					例⼦⼆：<br>
-					3歲男孩⼦坐下時不⼩⼼跌在地上，然後轉個頭看著我唱了⼀句 “One fell off and bumped hishead!” (這句話出⾃歌曲 “Five Little Monkeys”)。<br><br>
+					3歲男孩⼦坐下時不⼩⼼跌在地上，然後轉個頭看著我唱了⼀句 “One fell off and bumped his head!” (這句話出⾃歌曲 “Five Little Monkeys”)。<br><br>
 
 					他存取這⾸歌的⼀部分並在他跌倒時運⽤出來，正因為他是⽤整體語⾔處理的⽅式學習語⾔，所以他以「延遲的鸚鵡式說話」表達他「跌倒了」這個情況。他所說出的歌詞前部分意思恰當，但後部分“bumped his head“則不恰當，⽽他亦沒有將「One」轉換成「I」，這些都顯⽰出他是以⼀整句去處理語⾔，⽽不是逐個字詞去理解。他腦海中這⼀整句就等於「跌倒了」，⼀跌倒就會整句唱出來。<br><br>
 
