--- a/index.html
+++ b/index.html
@@ -213,6 +213,50 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
+							<a href="article/article09.html">
+								<img src="images/Article/article009.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">自閉症譜系障礙與聲量控制</h5> <br>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 4分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 98 </i>
+									<i class="fa fa-heart-o"> 65 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article08.html">
+								<img src="images/Article/article008.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">如何回應孩子憤怒情緒</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 113 </i>
+									<i class="fa fa-heart-o"> 80 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
 							<a href="article/article07.html">
 								<img src="images/Article/article007.png" alt="Card image">
 								<div class="line"></div>
@@ -231,51 +275,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article06.html">
-								<img src="images/Article/article006.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">孩子幾歲要懂多少個詞彙？</h5> <br>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 2分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 99 </i>
-									<i class="fa fa-heart-o"> 63 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article05.html">
-								<img src="images/Article/article005.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">語⾔發展的重要基⽯ - 語⾔前技能(上)</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 8分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 72 </i>
-									<i class="fa fa-heart-o"> 48 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
 
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
