--- a/share.html
+++ b/share.html
@@ -139,6 +139,50 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article09.html">
+							<img src="images/Article/article009.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">自閉症譜系障礙與聲量控制</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 4分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 98 </i>
+								<i class="fa fa-heart-o"> 65 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article08.html">
+							<img src="images/Article/article008.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">如何回應孩⼦憤怒情緒</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 113 </i>
+								<i class="fa fa-heart-o"> 80 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article07.html">
 							<img src="images/Article/article007.png" alt="Card image">
 							<div class="line"></div>
