--- a/article/article09.html
+++ b/article/article09.html
@@ -166,7 +166,7 @@
 					透過客觀的標準配上視覺提示提醒孩子，比起說：「細聲啲，唔使咁大聲講嘢！」往往來得更有效。後者容易讓孩子感到無所適從：我唔覺得大聲/我已經細聲咗/仲要幾細聲？當有既客觀又具體的標準時，孩子就能更清晰理解及跟從要求。<br><br>
 
 					<h4><b>總結</b></h4>
-					善良聲量表，逐步幫助孩子掌握適當聲量說話！<br>
+					善用聲量表，逐步幫助孩子掌握適當聲量說話！<br>
 					提提你，當孩子情緒爆發的時候，就不是一個學習聲量控制的好時機喇！<br><br>
 
 					把這篇⽂章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。<br>
