--- a/index.html
+++ b/index.html
@@ -213,6 +213,50 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
+							<a href="article/article011.html">
+								<img src="images/Article/article011.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">執行功能是甚麼?</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 5分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 210 </i>
+									<i class="fa fa-heart-o"> 135 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article010.html">
+								<img src="images/Article/article010.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">如何有效地與孩子設限</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 117 </i>
+									<i class="fa fa-heart-o"> 68 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
 							<a href="article/article09.html">
 								<img src="images/Article/article009.png" alt="Card image">
 								<div class="line"></div>
@@ -231,50 +275,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article08.html">
-								<img src="images/Article/article008.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">如何回應孩子憤怒情緒</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 3分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 113 </i>
-									<i class="fa fa-heart-o"> 80 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article07.html">
-								<img src="images/Article/article007.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">自閉症孩子常有的「鸚鵡式說話」到底是怎麼一回事？</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 8分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 103 </i>
-									<i class="fa fa-heart-o"> 57 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+
 
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
