--- a/share.html
+++ b/share.html
@@ -139,6 +139,50 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article011.html">
+							<img src="images/Article/article011.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">執行功能是甚麼?</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 5分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 210 </i>
+								<i class="fa fa-heart-o"> 135 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article010.html">
+							<img src="images/Article/article010.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">如何有效地與孩子設限</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 117</i>
+								<i class="fa fa-heart-o"> 68 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article09.html">
 							<img src="images/Article/article009.png" alt="Card image">
 							<div class="line"></div>
