--- a/article/article011.html
+++ b/article/article011.html
@@ -149,7 +149,7 @@
 					這篇文章為⼤家介紹四種基本的執行功能：反應抑制、持久專注力、認知靈活性、⼯作記憶。<br><br>
 
 					<h4><b>反應抑制</b></h4>
-					反應抑制，英文叫Response Inhibition，意指一個人在完成⽬標的過程中能考慮後果及情況再作行動。這種能力包括控制⾃⼰、忍住衝動，不去做一些與⽬標不相關或相⽭盾的行為。<br><br>
+					反應抑制，英文叫Response Inhibition，意指一個人在完成⽬標的過程中能考慮後果及情況再作行動。這種能力包括控制自⼰、忍住衝動，不去做一些與⽬標不相關或相⽭盾的行為。<br><br>
 					
 					反應抑制能力弱的常見例子：<br>
 					• 經常沒有考慮後果便衝動行事<br>
@@ -185,7 +185,7 @@
 					• 需要較長時間思考<br><br>
 
 					<h4><b>總結</b></h4>
-					患有專注力不足/過度活躍症(Attention Deficit/Hyperactivity Disorder，簡稱ADHD)和⾃閉症譜系障礙(Autistic Spectrum Disorder，簡稱ASD)的孩子在執行功能上的發展比同齡人慢，導致他們在學習、社交和⽣活上都遇到較⼤的困難。<br><br>
+					患有專注力不足/過度活躍症(Attention Deficit/Hyperactivity Disorder，簡稱ADHD)和自閉症譜系障礙(Autistic Spectrum Disorder，簡稱ASD)的孩子在執行功能上的發展比同齡人慢，導致他們在學習、社交和⽣活上都遇到較⼤的困難。<br><br>
 
 					可幸的是，執行功能是可以通過後天訓練得到提升。只要提供適當⽀援，就能提升孩子的執行功能，幫助他們在學習和⽇常⽣活上達到更理想的表現。<br><br>
 
