--- a/article/article011.html
+++ b/article/article011.html
@@ -145,7 +145,7 @@
 				<div class="panel-body narrow-text">
 					<h4><b>執行功能是甚麼？</b></h4>
 					執行功能，英文叫Excecutive Function，是指完成⽬標時所應用的認知功能，簡單來說即是執行的能力。<br>
-					⼤腦就像一個交通指揮員，在同一時間處理四⾯八⽅的資訊，再去選擇、過濾、分析、思考，從⽽作出相應的判斷或行為。因此，執行功能較弱的孩子在認知、學習、社交等都會⾯對很⼤挑戰。<br>
+					⼤腦就像一個交通指揮員，在同一時間處理四面八方的資訊，再去選擇、過濾、分析、思考，從⽽作出相應的判斷或行為。因此，執行功能較弱的孩子在認知、學習、社交等都會面對很⼤挑戰。<br>
 					這篇文章為⼤家介紹四種基本的執行功能：反應抑制、持久專注力、認知靈活性、⼯作記憶。<br><br>
 
 					<h4><b>反應抑制</b></h4>
@@ -170,14 +170,14 @@
 					• 常有疏忽<br><br>
 
 					<h4><b>認知靈活性</b></h4>
-					認知靈活性，英文叫Cognitive Flexibility，是指當事情出現困難或新訊息時，有能力彈性地修改計畫，亦能將過往經驗靈活運用。具備這個應變能力的孩子能在有需要的時候改變注意點和接受改變，靈活思考以想到不同⽅法解決問題。<br><br>
+					認知靈活性，英文叫Cognitive Flexibility，是指當事情出現困難或新訊息時，有能力彈性地修改計畫，亦能將過往經驗靈活運用。具備這個應變能力的孩子能在有需要的時候改變注意點和接受改變，靈活思考以想到不同方法解決問題。<br><br>
 					認知靈活性弱的常見例子：<br>
 					• 較多固執行為<br>
-					• 不善於尋求協助或嘗試運用不同的⽅法解決問題<br>
+					• 不善於尋求協助或嘗試運用不同的方法解決問題<br>
 					• 較難適應突如其來的變化<br><br>
 
 					<h4><b>⼯作記憶</b></h4>
-					⼯作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 ⼯作記憶亦讓一個人能適當分配專注力，即一心幾用。⼯作記憶容量不足的孩子在⽣活和學習的各⽅⾯都會遭遇挑戰。<br><br>
+					⼯作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 ⼯作記憶亦讓一個人能適當分配專注力，即一心幾用。⼯作記憶容量不足的孩子在⽣活和學習的各方面都會遭遇挑戰。<br><br>
 
 					⼯作記憶能力弱的常見例子：<br>
 					• 經常在課堂中「遊魂」/難以專注<br>
