--- a/article/article011.html
+++ b/article/article011.html
@@ -146,7 +146,7 @@
 					<h4><b>執行功能是甚麼？</b></h4>
 					執行功能，英文叫Excecutive Function，是指完成⽬標時所應用的認知功能，簡單來說即是執行的能力。<br>
 					⼤腦就像一個交通指揮員，在同一時間處理四面八方的資訊，再去選擇、過濾、分析、思考，從⽽作出相應的判斷或行為。因此，執行功能較弱的孩子在認知、學習、社交等都會面對很⼤挑戰。<br>
-					這篇文章為⼤家介紹四種基本的執行功能：反應抑制、持久專注力、認知靈活性、⼯作記憶。<br><br>
+					這篇文章為⼤家介紹四種基本的執行功能：反應抑制、持久專注力、認知靈活性、工作記憶。<br><br>
 
 					<h4><b>反應抑制</b></h4>
 					反應抑制，英文叫Response Inhibition，意指一個人在完成⽬標的過程中能考慮後果及情況再作行動。這種能力包括控制自⼰、忍住衝動，不去做一些與⽬標不相關或相⽭盾的行為。<br><br>
@@ -160,7 +160,7 @@
 					• 容易發脾氣<br><br>
 
 					<h4><b>持久專注力</b></h4>
-					持久專注力，英文叫Sustained attention，是指在一段持續時間中，專注於完成⼯作或任務的能力。能持久專注的人即使在完成⽬標的過程中受到⼲擾，又或是在疲累或乏味的情況下仍能夠保持專注力，以完成⼯作為⽬標。反之，缺乏持久專注力的人容易被無關重要的事物⼲擾⽽分心，難以貫徹地執行任務。<br><br>
+					持久專注力，英文叫Sustained attention，是指在一段持續時間中，專注於完成工作或任務的能力。能持久專注的人即使在完成⽬標的過程中受到⼲擾，又或是在疲累或乏味的情況下仍能夠保持專注力，以完成工作為⽬標。反之，缺乏持久專注力的人容易被無關重要的事物⼲擾⽽分心，難以貫徹地執行任務。<br><br>
 					
 					持久專注力弱的常見例子：<br>
 					• 注意力不集中和短暫<br>
@@ -176,10 +176,10 @@
 					• 不善於尋求協助或嘗試運用不同的方法解決問題<br>
 					• 較難適應突如其來的變化<br><br>
 
-					<h4><b>⼯作記憶</b></h4>
-					⼯作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 ⼯作記憶亦讓一個人能適當分配專注力，即一心幾用。⼯作記憶容量不足的孩子在⽣活和學習的各方面都會遭遇挑戰。<br><br>
+					<h4><b>工作記憶</b></h4>
+					工作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 工作記憶亦讓一個人能適當分配專注力，即一心幾用。工作記憶容量不足的孩子在⽣活和學習的各方面都會遭遇挑戰。<br><br>
 
-					⼯作記憶能力弱的常見例子：<br>
+					工作記憶能力弱的常見例子：<br>
 					• 經常在課堂中「遊魂」/難以專注<br>
 					• 經常忘記一連串的指令<br>
 					• 需要較長時間思考<br><br>
