--- a/article/article011.html
+++ b/article/article011.html
@@ -177,7 +177,7 @@
 					• 較難適應突如其來的變化<br><br>
 
 					<h4><b>工作記憶</b></h4>
-					工作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 工作記憶亦讓一個人能適當分配專注力，即一心幾用。工作記憶容量不足的孩子在⽣活和學習的各方面都會遭遇挑戰。<br><br>
+					工作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 工作記憶亦讓一個人能適當分配專注力，即一心幾用。工作記憶容量不足的孩子在生活和學習的各方面都會遭遇挑戰。<br><br>
 
 					工作記憶能力弱的常見例子：<br>
 					• 經常在課堂中「遊魂」/難以專注<br>
@@ -185,9 +185,9 @@
 					• 需要較長時間思考<br><br>
 
 					<h4><b>總結</b></h4>
-					患有專注力不足/過度活躍症(Attention Deficit/Hyperactivity Disorder，簡稱ADHD)和自閉症譜系障礙(Autistic Spectrum Disorder，簡稱ASD)的孩子在執行功能上的發展比同齡人慢，導致他們在學習、社交和⽣活上都遇到較⼤的困難。<br><br>
+					患有專注力不足/過度活躍症(Attention Deficit/Hyperactivity Disorder，簡稱ADHD)和自閉症譜系障礙(Autistic Spectrum Disorder，簡稱ASD)的孩子在執行功能上的發展比同齡人慢，導致他們在學習、社交和生活上都遇到較⼤的困難。<br><br>
 
-					可幸的是，執行功能是可以通過後天訓練得到提升。只要提供適當⽀援，就能提升孩子的執行功能，幫助他們在學習和⽇常⽣活上達到更理想的表現。<br><br>
+					可幸的是，執行功能是可以通過後天訓練得到提升。只要提供適當⽀援，就能提升孩子的執行功能，幫助他們在學習和日常生活上達到更理想的表現。<br><br>
 
 					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。<br>
 					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！
