--- a/article/article010.html
+++ b/article/article010.html
@@ -134,7 +134,7 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>自閉症譜系障礙與聲量控制</h2>
+					<h2>如何有效地與孩子設限</h2>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：01-11-2024</p>
 				</div>
@@ -147,7 +147,7 @@
 					
 					這些時候通常照顧者的情緒會被牽動、底線會被觸及，引致的結果大多有兩個。第一：照顧者妥協，因為⼩朋友的大嗌大喊令父母怕怕，故此選擇快快滿足當下的欲望，令其停止哭鬧；第二：父母以同樣的憤怒忟憎情緒回應子女，令他不敢再要求想要的東西、不敢再發脾氣。<br><br>
 
-					不能否認以以上兩種方法處理子女的脾氣所帶來的好處，就是事情快快被處理。可是，下一次再遇到同樣情況，這些畫⾯只會重覆出現。那麼該如何有效與孩子設限？家長可參考兒童為本遊戲輔導當中一個技巧：ACT<br><br>
+					不能否認以上兩種方法處理子女的脾氣所帶來的好處，就是事情快快被處理。可是，下一次再遇到同樣情況，這些畫⾯只會重覆出現。那麼該如何有效與孩子設限？家長可參考兒童為本遊戲輔導當中一個技巧：ACT<br><br>
 					
 					<h4><b>第一步：承認孩子當下的情緒 <u style="font-size: x-large;">A</u>CKNOWLEDGE THE FEELINGS</b></h4>
 					意即容許他有失落、失望、不開心、沮喪等感受，同時傳達「有這些感覺是正常的」訊息。<br><br>
