--- a/article/article010.html
+++ b/article/article010.html
@@ -134,7 +134,7 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>如何有效地與孩子設限</h2>
+					<h2>如何有效與孩子設限</h2>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：01-11-2024</p>
 				</div>
