--- a/share.html
+++ b/share.html
@@ -139,6 +139,50 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article013.html">
+							<img src="images/Article/article013.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">沉默是金？— 認識選擇性緘默症</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 112 </i>
+								<i class="fa fa-heart-o"> 75 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article012.html">
+							<img src="images/Article/article012.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">語言發展的重要基石 ─ 語言前技能(下)</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 5分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 199 </i>
+								<i class="fa fa-heart-o"> 92 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article011.html">
 							<img src="images/Article/article011.png" alt="Card image">
 							<div class="line"></div>
