--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">沉默是金？— 認識選擇性緘默症</h5>
+							<h5 class="card-title">沉默是金？— 認識選擇性緘默症</h5><br>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
@@ -240,7 +240,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">語言發展的重要基石 ─ 語言前技能(下)</h5> <br>
+							<h5 class="card-title">語言發展的重要基石 ─ 語言前技能(下)</h5> 
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
@@ -263,7 +263,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">執行功能是甚麼?</h5>
+							<h5 class="card-title">執行功能是甚麼?</h5><br>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
