--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
 				<div class="agileits-services">
 					<div class="videos">
 						<div>
-							<iframe class="latestVideoEmbed custom-iframe" vnum='0' width="600" height="340"
-								frameborder="0" allowfullscreen></iframe>
+							<!-- <iframe class="latestVideoEmbed custom-iframe" vnum='0' width="600" height="340"
+								frameborder="0" allowfullscreen></iframe>-->
+
+								<iframe width="600" height="340" src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
